<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"/>

        <TextView
            android:text="Login"
            style="@style/title01"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="40dp"/>

        <TextView
            android:text="User"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:textColor="@color/black"
            android:hint="@string/user"
            style="@style/edit01"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"/>

        <TextView
            android:text="Password"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:textColor="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/edit01"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/btn_enter"
            android:text="@string/enter"
            style="@style/button01"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="60dp"/>

        <TextView
            android:text="@string/did_you_forget_your_password"
            style="@style/text01"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/txv_reset"
            android:text="@string/reset_my_password"
            style="@style/text01" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"/>


    </LinearLayout>

</LinearLayout>